--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,15 @@
 name = "decay"
 version = "0.1.0"
 authors = ["Donald Whyte <donaldwhyte0@gmail.com>"]
+repository = "https://github.com/DonaldWhyte/decay"
+homepage = "https://github.com/DonaldWhyte/decay"
+documentation = "https://github.com/DonaldWhyte/decay"
+license = "MIT"
+readme = "README.md"
+keywords = [ "type", "decay", "macro", "helper", "development" ]
+categories= [
+    "development-tools::procedural-macro-helpers"
+]
 
 [lib]
 name = "decay"
