Add crate description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ keywords = [ "type", "decay", "macro", "helper", "development" ]
 categories= [
     "development-tools::procedural-macro-helpers"
 ]
+description="Macro for decaying Rust types to their simplest value type form"
 
 [lib]
 name = "decay"
